[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/Chicken/chicken.png" type="Texture" id=1]
[ext_resource path="res://Scripts/CSM.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Chicken.gd" type="Script" id=3]
[ext_resource path="res://Sound/pocooo.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.02701, 7.02329 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.04369, 5.49855 )

[node name="Chicken" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 3 )

[node name="CSM" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.0441914, 0.972271 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="RaysHorizontal" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="RaysHorizontal"]
position = Vector2( -3.93307, 1.31102 )
enabled = true
cast_to = Vector2( -10, 0 )

[node name="Right" type="RayCast2D" parent="RaysHorizontal"]
position = Vector2( 6.18053, 0.936445 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="RaysVertical" type="Node2D" parent="."]

[node name="LeftDown" type="RayCast2D" parent="RaysVertical"]
position = Vector2( -4.96316, -0.749153 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="RightDown" type="RayCast2D" parent="RaysVertical"]
position = Vector2( 7.11697, -0.749153 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="Wander" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0.984312, 2.51984 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
